--- a/contact.html
+++ b/contact.html
@@ -9,23 +9,23 @@
         </nav>
         <footer>
             <a href="https://twitter.com/Nokomo_Kudekara" target="_blank" rel="noopener noreferrer">
-                <img src="./img/TT.png"></img>
+                <img src="./img/tt2.png"></img>
                 <p>Alerhandro</p>
             </a>
             <a href="https://twitter.com/Nokomo_Kudekara" target="_blank" rel="noopener noreferrer">
-                <img src="./img/TT.png"></img>
+                <img src="./img/tt2.png"></img>
                 <p>Danieli</p>
             </a>
             <a href="https://twitter.com/notlikejaras?t=vOws1sV1GOmyvQgcDW7Ymw&s=08" target="_blank" rel="noopener noreferrer">
-                <img src="./img/TT.png"></img>
+                <img src="./img/tt2.png"></img>
                 <p>Gabriel</p>
             </a>
             <a href="https://twitter.com/Nokomo_Kudekara" target="_blank" rel="noopener noreferrer">
-                <img src="./img/TT.png"></img>
+                <img src="./img/tt2.png"></img>
                 <p>Julio</p>
             </a>
             <a href="https://twitter.com/Nokomo_Kudekara" target="_blank" rel="noopener noreferrer">
-                <img src="./img/TT.png"></img>
+                <img src="./img/tt2.png"></img>
                 <p>Pedro</p>
             </a>
         </footer>
