--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
         <header>
             <div class="center">
-                <img src="./img/DOG-B.png"></img>
+                <img src="./img/logo.png"></img>
             </div>       
     
             <h1>The World Tags</h1>
@@ -53,7 +53,7 @@
                 <p>Github</p>
             </a>
             <a href="https://twitter.com/Nokomo_Kudekara" target="_blank" rel="noopener noreferrer">
-                <img src="./img/TT.png"></img>
+                <img src="./img/tt2.png"></img>
                 <p>Twitter</p>
             </a>
         </footer>
