--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
                 <img src="./img/tt2.png"></img>
                 <p>Alerhandro</p>
             </a>
-            <a href="https://twitter.com/Nokomo_Kudekara" target="_blank" rel="noopener noreferrer">
-                <img src="./img/tt2.png"></img>
+            <a href="https://www.instagram.com/ssdaniss/?r=nametag" target="_blank" rel="noopener noreferrer">
+                <img src="./img/INSTA.PNG"></img>
                 <p>Danieli</p>
             </a>
             <a href="https://twitter.com/notlikejaras?t=vOws1sV1GOmyvQgcDW7Ymw&s=08" target="_blank" rel="noopener noreferrer">
@@ -24,8 +24,8 @@
                 <img src="./img/tt2.png"></img>
                 <p>Julio</p>
             </a>
-            <a href="https://twitter.com/Nokomo_Kudekara" target="_blank" rel="noopener noreferrer">
-                <img src="./img/tt2.png"></img>
+            <a href="https://www.instagram.com/ppp3dr0/" target="_blank" rel="noopener noreferrer">
+                <img src="./img/INSTA.PNG"></img>
                 <p>Pedro</p>
             </a>
         </footer>
