--- a/colar.html
+++ b/colar.html
@@ -1,37 +1,48 @@
 <link rel="stylesheet" href="venda.css">
 <script src="teste.js"></script>
+
 <body>
-<div>
-<nav class="container">
-    <ul>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-</nav>
-    <header>
-        <div class="center">
-            <img src="./img/tags.png"></img>
-        </div>       
-        <h1>Tags para Pessoas</h1>
-        <h2>Crie sua tag personalizada para voce</h2>
-    </header>
-<main>
-    <section>
-        <h3>Sobre o produto</h3>
-        <p>
-        Placa de aluminio ou Polipropileno personalizada.
-        </p>
-    </section>
+    <div>
+        <nav class="container">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+        </nav>
+        <header>
+            <div class="center">
+                <img src="./img/tags.png"></img>
+            </div>
+            <h1>Tags para Pessoas</h1>
+            <h2>Crie sua tag personalizada para voce</h2>
+        </header>
+        <main>
+            <section>
+                <h3>Sobre o produto</h3>
+                <p>
+                    Placa de aluminio ou Polipropileno personalizada.
+                </p>
+            </section>
+            <section>
+                <h3>Sobre o produto</h3>
+                <p>
+                    Placa de aluminio ou Polipropileno personalizada.
+                </p>
+            </section>
+            <section class="alinhamento">
                 <main class="main">
                     <div class="preencher">
                         <div class="primeira">
-                            <form >
-                                <br>
-                                <input type="text" name="form_turma_usuario" id="form_turma_usuario" maxlength="10" onkeyup="receberTurmaUsuario()" value="DIGITE"><br>
-                                <input type="text" name="form_Digite_Usuario" id="form_Digite_Usuario" maxlength="10" onkeyup="receberDigite()" value="SEU"><br>
-                                <input type="text" name="form_Linha" id="form_Linha" maxlength="10" onkeyup="receberLinha()" value="NOME"><br>
-                                <input type="text" name="form_Coluna" id="form_Coluna" maxlength="10" onkeyup="receberColuna()" value="AQUI"><br>
-                            </form>  
+                            <form>
+                                <input type="text" name="form_turma_usuario" id="form_turma_usuario" maxlength="10"
+                                    onkeyup="receberTurmaUsuario()" value="DIGITE"><br>
+                                <input type="text" name="form_Digite_Usuario" id="form_Digite_Usuario" maxlength="10"
+                                    onkeyup="receberDigite()" value="SEU"><br>
+                                <input type="text" name="form_Linha" id="form_Linha" maxlength="10"
+                                    onkeyup="receberLinha()" value="NOME"><br>
+                                <input type="text" name="form_Coluna" id="form_Coluna" maxlength="10"
+                                    onkeyup="receberColuna()" value="AQUI"><br>
+                            </form>
                         </div>
                     </div>
                     <section class="galery" id="galary1">
@@ -45,54 +56,53 @@
                         </aside>
                     </section>
                 </main>
-                <br><br>
-                <header>Escolha qual placa deseja</header><br>
-                    <section class="produtos">                   
-                        <section class="produto"> 
-                            <input type="radio" id="aco" name="fav_language" value="ACO">
-                            <label for="html"><img src="./img/TAGAÇO.PNG" alt=""></label><br>
-                            <p>Placa de Aço</p>
-                        </section>
-                        <section class="produto">    
-                            <input type="radio" id="pp" name="fav_language" value="PP">
-                            <label for="css"><img src="./img/TAGPP.png" alt=""></label><br>
-                            <p>Placa de Polipropileno</p>
-                            <div class="botoes">
-                                <div>
-                                    Preço:&nbsp;
-                                    <b style="color: white; font-size:21px;">
-                                        <br>
-                                        R$<span>50,00</span>
-                                    </b>
-                                    <br>
-                                </div>
-                                <div class="btn">
-                                <input name="submit" type="submit" value="Confirmar" class="btn btn-success btn-lg" align="middle">
-                                </div>
-                            </div>
-                        </section>
-                    </section>
-                <div class="descricao text-left">
+            </section>
+            <br><br>
+            <header>Escolha qual placa deseja</header><br>
+            <section class="produtos">
+                <section class="produto">
+                    <input type="radio" id="aco" name="fav_language" value="ACO">
+                    <label for="html"><img src="./img/TAGAÇO.PNG" alt=""></label><br>
+                    <p>Placa de Aço</p>
+                </section>
+                <section class="produto">
+                    <input type="radio" id="pp" name="fav_language" value="PP">
+                    <label for="css"><img src="./img/TAGPP.png" alt=""></label><br>
+                    <p>Placa de Polipropileno</p>
+                </section>
+                <section class="comprar">
+                    <div class="botoes">
+                        <div>
+                            Preço:&nbsp;
+                            <b style="color: white; font-size:21px;"><br>
+                                R$<span>50,00</span>
+                            </b>
+                            <br>
+                        </div>
+                        <a href="FINALIZAR.HTML" class="button" style="vertical-align:middle"><span>Comprar</span></a>
+                    </div>
+                </section>
+            </section>
+            <div class="descricao text-left">
                 <br>
                 <div class="col-md-6">
                     <h3><b>Descrição produto</b></h3>
                     <p>- Gravação por Prensa Mecânica (Alto Relevo usada à partir da Guerra do Vietnã) <br>
-                    - Caracteres em Caixa Alta de A a Z , números de 0 a 9 , caracteres especiais: <br>
-                    --> + - / &amp; 0 ) ( . ´ <-- <br>
-        
-                    <h3><b>Gravação Padrão:</b> <br></h3>
-                    Placa na Horizontal: até 5 Linhas e até 15 caracteres por linha <br>
-                    para efeito de gravação, "espaço" também é considerado caractere) <br>
-                    <br>
-                    <b>Medida:</b> <br>
-                    - Placa: 50 mm x 28 mm x 0,5 mm <br>
-                    - Aço (borda com reforço 0,8 mm) <br>
-                    - peso: 4,5 g <br>
+                        - Caracteres em Caixa Alta de A a Z , números de 0 a 9 , caracteres especiais: <br>
+                        -> + - / &amp; 0 ) ( . ´ <-- <br>
+                            <h3><b>Gravação Padrão:</b> <br></h3>
+                            Placa na Horizontal: até 5 Linhas e até 15 caracteres por linha <br>
+                            para efeito de gravação, "espaço" também é considerado caractere) <br>
+                            <br>
+                            <b>Medida:</b> <br>
+                            - Placa: 50 mm x 28 mm x 0,5 mm <br>
+                            - Aço (borda com reforço 0,8 mm) <br>
+                            - peso: 4,5 g <br>
                     </p>
                 </div>
-                    <div class="col-md-4">
+                <div class="col-md-4">
                     <br>
-                    <b>Material:</b>  <br>
+                    <b>Material:</b> <br>
                     - Aço 304 - Dog tag com borda. <br>
                     - Cor: aço inox original fosca<br>
                     - PP - Dog tag cores lisa. <br>
@@ -103,18 +113,18 @@
                     - 1 Corrente bolinha 2,4 mm de 05 Cm <br>
                     - 1 placas com gravacão em alto relevo<p></p>
                     <br><br><br>
-                </div> 
                 </div>
-                </section>
-                    </main>
-                    <footer>
-                        <a href="https://github.com/Alerhandro" target="_blank" rel="noopener noreferrer">
-                    <img src="./img/GIT.png"></img>
-                    <p>Github</p>
-                </a>
-                <a href="https://twitter.com/Nokomo_Kudekara" target="_blank" rel="noopener noreferrer">
-                    <img src="./img/tt2.png"></img>
-                    <p>Twitter</p>
-                </a>
-            </footer>
-        </div>
+            </div>
+            </section>
+        </main>
+        <footer>
+            <a href="https://github.com/Alerhandro" target="_blank" rel="noopener noreferrer">
+                <img src="./img/GIT.png"></img>
+                <p>Github</p>
+            </a>
+            <a href="https://twitter.com/Nokomo_Kudekara" target="_blank" rel="noopener noreferrer">
+                <img src="./img/tt2.png"></img>
+                <p>Twitter</p>
+            </a>
+        </footer>
+    </div>
