--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,8 @@
                 <img src="./img/INSTA.PNG"></img>
                 <p>Danieli</p>
             </a>
-            <a href="https://twitter.com/notlikejaras?t=vOws1sV1GOmyvQgcDW7Ymw&s=08" target="_blank" rel="noopener noreferrer">
+            <a href="https://twitter.com/notlikejaras?t=vOws1sV1GOmyvQgcDW7Ymw&s=08" target="_blank"
+                rel="noopener noreferrer">
                 <img src="./img/tt2.png"></img>
                 <p>Gabriel</p>
             </a>
