--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>TWT The World Tag</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <div>
         <nav class="container">
@@ -20,26 +22,38 @@
                 <li>
                     <a href="contact.html">Contato</a>
                 </li>
+     <!--          <li>
+                    <a href="loja.html">TESTE</a>
+                </li>-->
             </ul>
         </nav>
         <header>
             <div class="center">
                 <img src="./img/logo.png"></img>
-            </div>       
-    
+            </div>
+
             <h1>THE WORLD TAGS</h1>
             <h2>Crie sua tag personalizada</h2>
         </header>
         <main>
             <section>
                 <h3>Sobre nos</h3>
-                <p>Nos da TWT(THE WORLD TAGS) com vontade em tornar você e seu bichinho de estimação muito mais estiloso imaginamos como realizar essa tarefa, e veio a resposta e tivemos a seguinte inspiração, nos <br>
-                    anos de 1861-1865 era usado Dogtag's para identificar o soldado com informações cruciais sobre o mesmo, e pensamos por que não fazer com que possa fazer isso com o nosso pet e ai veio a virada de chave <br>
-                    e desde 2022 estamos trabalhando para tornar você e seu pet completamente dripados com vários modelos e varias cores para você escolher de nossas Dogtag's. Venha se tornar o sauce em pessoa ou doguinho <br> 
+                <p>Nos da TWT(THE WORLD TAGS) com vontade em tornar você e seu bichinho de estimação muito mais estiloso
+                    imaginamos como realizar essa tarefa, e veio a resposta e tivemos a seguinte inspiração, nos <br>
+                    anos de 1861-1865 era usado Dogtag's para identificar o soldado com informações cruciais sobre o
+                    mesmo, e pensamos por que não fazer com que possa fazer isso com o nosso pet e ai veio a virada de
+                    chave <br>
+                    e desde 2022 estamos trabalhando para tornar você e seu pet completamente dripados com vários
+                    modelos e varias cores para você escolher de nossas Dogtag's. Venha se tornar o sauce em pessoa ou
+                    doguinho <br>
                     com nossas Dogtag's entregamos em todo o pais</p>
             </section>
         </main>
-        <br><br><br><br><br><br><br><br><br><br>
+        <br><br>
+        <div class="botao">
+            <a href="personalize.html" class="button" style="vertical-align:middle"><span>Comprar</span></a>
+        </div>
+        <br><br><br><br><br><br><br>
         <footer>
             <a href="https://github.com/Alerhandro" target="_blank" rel="noopener noreferrer">
                 <img src="./img/GIT.png"></img>
@@ -52,4 +66,5 @@
         </footer>
     </div>
 </body>
+
 </html>
